<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_address_detail"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/back_round"
    android:elevation="5dp"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.apitap.views.AddressDetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/addresstype"
                android:background="@android:color/white"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColor="@android:color/black"
                android:textColorHint="#617291"
                android:textSize="16dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#E1E5E8" />

            <EditText
                android:id="@+id/et_line1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/addressline1"
                android:background="@android:color/white"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColor="@android:color/black"
                android:textColorHint="#617291"
                android:textSize="16dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#E1E5E8" />

            <EditText
                android:id="@+id/et_line2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@android:color/white"
                android:hint="@string/addressline2"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColor="@android:color/black"
                android:textColorHint="#617291"
                android:textSize="16dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#E1E5E8" />

            <TextView
                android:id="@+id/txt_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:drawableRight="@android:drawable/arrow_down_float"
                android:drawableTint="#617291"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:text="@string/country"
                android:textColor="@android:color/black"
                android:textSize="16dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#E1E5E8" />

            <TextView
                android:id="@+id/txt_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:drawableRight="@android:drawable/arrow_down_float"
                android:drawableTint="#617291"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:text="@string/state"
                android:textColor="@android:color/black"
                android:textSize="16dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#E1E5E8" />

            <TextView
                android:id="@+id/txt_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:drawableRight="@android:drawable/arrow_down_float"
                android:drawableTint="#617291"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:text="@string/city"
                android:textColor="@android:color/black"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/txt_pin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:inputType="number"
                android:padding="10dp"
                android:text="@string/pincode"
                android:textColor="@android:color/black"
                android:textSize="16dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#E1E5E8" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#E1E5E8" />

            <EditText
                android:id="@+id/et_mob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/mobilenumber"
                android:inputType="number"
                android:background="@android:color/white"
                android:padding="10dp"
                android:textColor="@android:color/black"
                android:textColorHint="#617291"
                android:textSize="16dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#E1E5E8" />

            <Button
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/bg_blue"
                android:text="@string/save"
                android:textColor="@android:color/white"
                android:textSize="18dp" />

        </LinearLayout>
    </ScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:visibility="gone" />

</RelativeLayout>
