<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:scrollbarSize="10dp"
        android:scrollbarThumbVertical="@drawable/custom_scroll_style">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/first_name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="10dp"
                android:hint="@string/first_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/second_name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="10dp"
                android:hint="@string/second_name"
                android:inputType="textPersonName" />


            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="10dp"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/editTextDOB"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="10dp"
                android:cursorVisible="false"
                android:focusable="false"
                android:hint="@string/enter_dob"
                android:inputType="textEmailAddress" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="10dp">


                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword" />

                <ImageView
                    android:id="@+id/imageViewHideShowPass"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:elevation="2dp"
                    android:src="@drawable/ic_hide_pass"
                    android:translationZ="2dp"
                    app:tint="@android:color/darker_gray" />

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="10dp">

                <EditText
                    android:id="@+id/confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword" />

                <ImageView
                    android:id="@+id/imageViewHideShowConfirmPass"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:elevation="2dp"
                    android:src="@drawable/ic_hide_pass"
                    android:translationZ="2dp"
                    app:tint="@android:color/darker_gray" />

            </RelativeLayout>

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="10dp"
                android:visibility="gone"></Spinner>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_pass"
                    android:textColor="#505050" />

            </RelativeLayout>

            <!-- 🔹 ADDRESS SECTION -->

            <!-- Address 1 -->
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/address1"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="10dp"
                    android:hint="Address 1"
                    android:imeOptions="actionDone"
                    android:maxLines="1"
                    android:singleLine="true" />


                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageViewMap"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="end|center"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_map_square" />

            </FrameLayout>

            <TextView
                android:id="@+id/textViewErrorAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_9ssp"
                android:fontFamily="@font/poppins_regular"
                android:includeFontPadding="false"
                android:visibility="gone"
                android:textColor="@color/colorRed"
                android:layout_marginHorizontal="12dp"
                android:text="We couldn’t verify this address." />


            <!-- ZIP Code -->
            <EditText
                android:id="@+id/addressNickname"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="10dp"
                android:hint="Address Nickname"
                android:imeOptions="actionDone"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:singleLine="true" />

            <!-- ZIP Code -->
            <EditText
                android:id="@+id/zipcode"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="10dp"
                android:digits="0123456789"
                android:hint="ZIP Code"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true" />

            <TextView
                android:id="@+id/textViewErrorZip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_9ssp"
                android:visibility="gone"
                android:fontFamily="@font/poppins_regular"
                android:includeFontPadding="false"
                android:textColor="@color/colorRed"
                android:layout_marginHorizontal="12dp"
                android:text="We couldn’t verify this ZIP." />


            <!-- City (READ ONLY) -->
            <EditText
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="10dp"
                android:clickable="false"
                android:editable="false"
                android:focusable="false"
                android:hint="City" />

            <!-- State (READ ONLY) -->
            <EditText
                android:id="@+id/state"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="10dp"
                android:clickable="false"
                android:editable="false"
                android:focusable="false"
                android:hint="State" />

            <RelativeLayout
                android:id="@+id/create_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="@dimen/_80sdp"
                android:background="@drawable/rounded_bg_dblue"
                android:gravity="center"
                android:paddingVertical="@dimen/_4sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/create_acc"
                    android:textColor="@color/colorWhite" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/privacy"
                android:textColor="@color/colorWhite"
                android:visibility="gone" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>